force-app/main/default/objects/Grantee_Report__c/Grantee_Report__c.object-meta.xml
<CustomObject>
    <label>DCTAT Report</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Grantee Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCTAT Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>