force-app/main/default/objects/Grantee_Report__c/fields/Additional_Staff_NOT_Complete_Training__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_NOT_Complete_Training__c</fullName>
    <label>Additional Staff NOT Complete Training</label>
    <length>11</length>
    <type>Text</type>
</CustomField>