force-app/main/default/objects/Grantee_Report__c/fields/Adults_Served_at_Youth_Development_Park__c.field-meta.xml
<CustomField>
    <fullName>Adults_Served_at_Youth_Development_Park__c</fullName>
    <label>Adults Served at Youth Development Park</label>
    <length>11</length>
    <type>Text</type>
</CustomField>