force-app/main/default/objects/Grantee_Report__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6 Years Old</fullName>
            </value>
            <value>
                <fullName>7 Years Old</fullName>
            </value>
            <value>
                <fullName>8 Years Old</fullName>
            </value>
            <value>
                <fullName>9 Years Old</fullName>
            </value>
            <value>
                <fullName>10 Years Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>