force-app/main/default/objects/Grantee_Report__c/fields/Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Needed__c</fullName>
    <label>Assistance Needed</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>