force-app/main/default/objects/Grantee_Report__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DCTAT Reports (CEO)</relationshipLabel>
    <relationshipName>CEO_DCTAT_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>