force-app/main/default/objects/Grantee_Report__c/fields/Certified_By__c.field-meta.xml
<CustomField>
    <fullName>Certified_By__c</fullName>
    <label>Certified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>