force-app/main/default/objects/Grantee_Report__c/fields/Community_Partnerships__c.field-meta.xml
<CustomField>
    <fullName>Community_Partnerships__c</fullName>
    <label>Community Partnerships</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>