force-app/main/default/objects/Grantee_Report__c/fields/Describe_How_Plan_Was_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Describe_How_Plan_Was_Implemented__c</fullName>
    <label>Describe How Plan Was Implemented</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>