force-app/main/default/objects/Grantee_Report__c/fields/Female_Mentors_Serving_in_Military__c.field-meta.xml
<CustomField>
    <fullName>Female_Mentors_Serving_in_Military__c</fullName>
    <label>Female Mentors Serving in Military</label>
    <length>11</length>
    <type>Text</type>
</CustomField>