force-app/main/default/objects/Grantee_Report__c/fields/FirstPic_National_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code__c</fullName>
    <formula
  >IF(Grant__r.FirstPic_National_Org_Code__c != null, Grant__r.FirstPic_National_Org_Code__c,  
IF(Organization__r.FirstPic_National_Org_Code__c != null, Organization__r.FirstPic_National_Org_Code__c, 
Organization__r.FirstPic_Org_Code__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstPic National Org Code</label>
    <type>Text</type>
</CustomField>