force-app/main/default/objects/Grantee_Report__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Suburban</fullName>
            </value>
            <value>
                <fullName>Tribal</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Youth Population Not Directly Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>