force-app/main/default/objects/Grantee_Report__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipName>Grantee_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>