force-app/main/default/objects/Grantee_Report__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <formula>TEXT(Grant__r.Grant_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Type</label>
    <type>Text</type>
</CustomField>