force-app/main/default/objects/Grantee_Report__c/fields/Have_Youth_Offended__c.field-meta.xml
<CustomField>
    <fullName>Have_Youth_Offended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Youth Offended</label>
    <type>Checkbox</type>
</CustomField>