force-app/main/default/objects/Grantee_Report__c/fields/Hosted_Graduation_Ceremony__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Graduation_Ceremony__c</fullName>
    <label>Hosted Graduation Ceremony</label>
    <length>255</length>
    <type>Text</type>
</CustomField>