force-app/main/default/objects/Grantee_Report__c/fields/How_Other_Program_Resources_Were_Used__c.field-meta.xml
<CustomField>
    <fullName>How_Other_Program_Resources_Were_Used__c</fullName>
    <label>How Other Program Resources Were Used</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>