force-app/main/default/objects/Grantee_Report__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <formula>OR(
ISPICKVAL(Report_Status__c, &apos;Requested&apos;), 
ISPICKVAL(Report_Status__c, &apos;Not Started&apos;), 
ISPICKVAL(Report_Status__c, &apos;In Progress&apos;), 
ISPICKVAL(Report_Status__c, &apos;Revisions Needed&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>