force-app/main/default/objects/Grantee_Report__c/fields/Innovative_Programs_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Innovative_Programs_Accomplishments__c</fullName>
    <label>Innovative Programs Accomplishments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>