force-app/main/default/objects/Grantee_Report__c/fields/Justice__c.field-meta.xml
<CustomField>
    <fullName>Justice__c</fullName>
    <label>Justice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At-Risk Population</fullName>
                <label>At-Risk Population (no prior offenses)</label>
            </value>
            <value>
                <fullName>First Time Offenders</fullName>
            </value>
            <value>
                <fullName>Repeat Offenders</fullName>
            </value>
            <value>
                <fullName>Sex Offenders</fullName>
            </value>
            <value>
                <fullName>Status Offenders</fullName>
            </value>
            <value>
                <fullName>Violent Offenders</fullName>
            </value>
            <value>
                <fullName>Youth Population Not Directly Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>