force-app/main/default/objects/Grantee_Report__c/fields/Law_Enforcement_Agencies_Participating__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Agencies_Participating__c</fullName>
    <label>Law Enforcement Agencies Participating</label>
    <length>11</length>
    <type>Text</type>
</CustomField>