force-app/main/default/objects/Grantee_Report__c/fields/Law_Enforcement_Reps_Left_Program__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Reps_Left_Program__c</fullName>
    <label>Law Enforcement Reps Left Program</label>
    <length>11</length>
    <type>Text</type>
</CustomField>