force-app/main/default/objects/Grantee_Report__c/fields/Law_Enforcement_Reps_Serving_in_Military__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Reps_Serving_in_Military__c</fullName>
    <label>Law Enforcement Reps Serving in Military</label>
    <length>11</length>
    <type>Text</type>
</CustomField>