force-app/main/default/objects/Grantee_Report__c/fields/Local_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Id__c</fullName>
    <formula>CASESAFEID(Organization__r.Local_Organization__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Id</label>
    <type>Text</type>
</CustomField>