force-app/main/default/objects/Grantee_Report__c/fields/Local_Organization_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Is_Active__c</fullName>
    <formula>Organization__r.Local_Organization__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Is Active</label>
    <type>Checkbox</type>
</CustomField>