force-app/main/default/objects/Grantee_Report__c/fields/Match_Closed_Early__c.field-meta.xml
<CustomField>
    <fullName>Match_Closed_Early__c</fullName>
    <label>Match Closed Early</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>