force-app/main/default/objects/Grantee_Report__c/fields/Match_Exceeded_Minimum_Match_Length__c.field-meta.xml
<CustomField>
    <fullName>Match_Exceeded_Minimum_Match_Length__c</fullName>
    <label>Match Exceeded Minimum Match Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>