force-app/main/default/objects/Grantee_Report__c/fields/Match_Meetings_Exceeded_Hours__c.field-meta.xml
<CustomField>
    <fullName>Match_Meetings_Exceeded_Hours__c</fullName>
    <label>Match Meetings Exceeded Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>