force-app/main/default/objects/Grantee_Report__c/fields/Mentoring_Programs_Operated__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_Programs_Operated__c</fullName>
    <label>Mentoring Programs Operated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>