force-app/main/default/objects/Grantee_Report__c/fields/Mentors_Currently_Serving_in_Military__c.field-meta.xml
<CustomField>
    <fullName>Mentors_Currently_Serving_in_Military__c</fullName>
    <label>Mentors Currently Serving in Military</label>
    <length>11</length>
    <type>Text</type>
</CustomField>