force-app/main/default/objects/Grantee_Report__c/fields/Mentors_Left_the_Program__c.field-meta.xml
<CustomField>
    <fullName>Mentors_Left_the_Program__c</fullName>
    <label>Mentors Left the Program</label>
    <length>11</length>
    <type>Text</type>
</CustomField>