force-app/main/default/objects/Grantee_Report__c/fields/Mentors_Serving_or_Served_in_Military__c.field-meta.xml
<CustomField>
    <fullName>Mentors_Serving_or_Served_in_Military__c</fullName>
    <label>Mentors Serving or Served in Military</label>
    <length>11</length>
    <type>Text</type>
</CustomField>