force-app/main/default/objects/Grantee_Report__c/fields/Mentors_with_Increased_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Mentors_with_Increased_Knowledge__c</fullName>
    <label>Mentors with Increased Knowledge</label>
    <length>11</length>
    <type>Text</type>
</CustomField>