force-app/main/default/objects/Grantee_Report__c/fields/National_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Id__c</fullName>
    <formula>CASESAFEID(Grant__r.Account__r.National_Organization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Organization Id</label>
    <type>Text</type>
</CustomField>