force-app/main/default/objects/Grantee_Report__c/fields/New_Law_Enforcement_Reps_Joined__c.field-meta.xml
<CustomField>
    <fullName>New_Law_Enforcement_Reps_Joined__c</fullName>
    <label>New Law Enforcement Reps Joined</label>
    <length>11</length>
    <type>Text</type>
</CustomField>