force-app/main/default/objects/Grantee_Report__c/fields/New_Mentors__c.field-meta.xml
<CustomField>
    <fullName>New_Mentors__c</fullName>
    <label>New Mentors</label>
    <length>11</length>
    <type>Text</type>
</CustomField>