force-app/main/default/objects/Grantee_Report__c/fields/New_Mentors_Began_Training__c.field-meta.xml
<CustomField>
    <fullName>New_Mentors_Began_Training__c</fullName>
    <label>New Mentors Began Training</label>
    <length>11</length>
    <type>Text</type>
</CustomField>