force-app/main/default/objects/Grantee_Report__c/fields/New_Youth_Identified_Both_Labor_Sex__c.field-meta.xml
<CustomField>
    <fullName>New_Youth_Identified_Both_Labor_Sex__c</fullName>
    <label>New Youth Identified Both Labor Sex</label>
    <length>3</length>
    <type>Text</type>
</CustomField>