force-app/main/default/objects/Grantee_Report__c/fields/New_Youth_Identified_Labor_Trafficking__c.field-meta.xml
<CustomField>
    <fullName>New_Youth_Identified_Labor_Trafficking__c</fullName>
    <label>New Youth Identified Labor Trafficking</label>
    <length>3</length>
    <type>Text</type>
</CustomField>