force-app/main/default/objects/Grantee_Report__c/fields/New_Youth_Served_Outside_Program__c.field-meta.xml
<CustomField>
    <fullName>New_Youth_Served_Outside_Program__c</fullName>
    <label>New Youth Served Outside Program</label>
    <length>11</length>
    <type>Text</type>
</CustomField>