force-app/main/default/objects/Grantee_Report__c/fields/Notes_from_National__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_National__c</fullName>
    <label>Notes from National</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>