force-app/main/default/objects/Grantee_Report__c/fields/Number_of_Parent_Volunteered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parent_Volunteered__c</fullName>
    <label>Number of Parent Volunteered</label>
    <length>11</length>
    <type>Text</type>
</CustomField>