force-app/main/default/objects/Grantee_Report__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DCTAT Reports</relationshipLabel>
    <relationshipName>DCTAT_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>