force-app/main/default/objects/Grantee_Report__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <formula>IF(Organization__c != null,
CASESAFEID(Organization__r.Id),
CASESAFEID(Grant__r.Account__r.Id)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Id</label>
    <type>Text</type>
</CustomField>