force-app/main/default/objects/Grantee_Report__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <formula>IF(Organization__c != null,
Organization__r.Name,
Grant__r.Account__r.Name
)</formula>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>