force-app/main/default/objects/Grantee_Report__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Pregnant</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Truant/Dropout</fullName>
            </value>
            <value>
                <fullName>Youth Population Not Directly Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>