force-app/main/default/objects/Grantee_Report__c/fields/Parent_Guardian_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Involvement__c</fullName>
    <label>Parent/Guardian Involvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>