force-app/main/default/objects/Grantee_Report__c/fields/Participated_Less_Than_4_Hours_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Participated_Less_Than_4_Hours_per_Month__c</fullName>
    <label>Participated Less Than 4 Hours per Month</label>
    <length>11</length>
    <type>Text</type>
</CustomField>