force-app/main/default/objects/Grantee_Report__c/fields/Participated_More_Than_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Participated_More_Than_6_Months__c</fullName>
    <label>Participated More Than 6 Months</label>
    <length>11</length>
    <type>Text</type>
</CustomField>