force-app/main/default/objects/Grantee_Report__c/fields/Percent_Evidence_Based_Program__c.field-meta.xml
<CustomField>
    <fullName>Percent_Evidence_Based_Program__c</fullName>
    <formula
  >Youth_Served_via_Evidence_Based_Program__c /  Total_Youth_Served__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Evidence-Based Program</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>