force-app/main/default/objects/Grantee_Report__c/fields/Percent_Mentor_Retention__c.field-meta.xml
<CustomField>
    <fullName>Percent_Mentor_Retention__c</fullName>
    <formula>IF(OR(Total_Mentors__c == null, Total_Mentors__c == 0), 0,
( Total_Mentors__c - VALUE(Mentors_Left_the_Program__c) ) / Total_Mentors__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Mentor Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>