force-app/main/default/objects/Grantee_Report__c/fields/Percent_New_Mentors_Completed_Training__c.field-meta.xml
<CustomField>
    <fullName>Percent_New_Mentors_Completed_Training__c</fullName>
    <formula
  >VALUE(New_Mentors_Completed_Training__c) /  VALUE(New_Mentors_Began_Training__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent New Mentors Completed Training</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>