force-app/main/default/objects/Grantee_Report__c/fields/Previous_Mentors__c.field-meta.xml
<CustomField>
    <fullName>Previous_Mentors__c</fullName>
    <label>Previous Mentors</label>
    <length>11</length>
    <type>Text</type>
</CustomField>