force-app/main/default/objects/Grantee_Report__c/fields/Previous_Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Previous_Youth_Served__c</fullName>
    <label>Previous Youth Served</label>
    <length>11</length>
    <type>Text</type>
</CustomField>