force-app/main/default/objects/Grantee_Report__c/fields/Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DCTAT Reports (Primary Approver)</relationshipLabel>
    <relationshipName>PA_DCTAT_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>