force-app/main/default/objects/Grantee_Report__c/fields/Primary_Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Id__c</fullName>
    <formula>CASESAFEID(Organization__r.Primary_Approver__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver Id</label>
    <type>Text</type>
</CustomField>