force-app/main/default/objects/Grantee_Report__c/fields/Primary_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Name__c</fullName>
    <formula>Grant__r.Account__r.Primary_Approver_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver Name</label>
    <type>Text</type>
</CustomField>