force-app/main/default/objects/Grantee_Report__c/fields/Problems_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Problems_Barriers__c</fullName>
    <label>Problems/Barriers</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>