force-app/main/default/objects/Grantee_Report__c/fields/Program_Locations_Served__c.field-meta.xml
<CustomField>
    <fullName>Program_Locations_Served__c</fullName>
    <label>Program Locations Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>