force-app/main/default/objects/Grantee_Report__c/fields/Program_on_Track__c.field-meta.xml
<CustomField>
    <fullName>Program_on_Track__c</fullName>
    <label>Program on Track</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>