force-app/main/default/objects/Grantee_Report__c/fields/Program_Sites_Served__c.field-meta.xml
<CustomField>
    <fullName>Program_Sites_Served__c</fullName>
    <label>Program Sites Served</label>
    <length>11</length>
    <type>Text</type>
</CustomField>