force-app/main/default/objects/Grantee_Report__c/fields/Programs_with_Active_Partners__c.field-meta.xml
<CustomField>
    <fullName>Programs_with_Active_Partners__c</fullName>
    <label>Programs with Active Partners</label>
    <length>11</length>
    <type>Text</type>
</CustomField>