force-app/main/default/objects/Grantee_Report__c/fields/Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity__c</fullName>
    <label>Race / Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian/Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black / African American</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latino</fullName>
                <label>Hispanic or Latino (of any race)</label>
            </value>
            <value>
                <fullName>Pacific Islander</fullName>
                <label>Native Hawaiian/Pacific Islander</label>
            </value>
            <value>
                <fullName>Other Race</fullName>
            </value>
            <value>
                <fullName>White / Caucasian</fullName>
            </value>
            <value>
                <fullName>Youth Population Not Directly Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>