force-app/main/default/objects/Grantee_Report__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Revisions Needed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Sent Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>