force-app/main/default/objects/Grantee_Report__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <label>Reporting Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2017 Q2</fullName>
            </value>
            <value>
                <fullName>2017 Q3</fullName>
            </value>
            <value>
                <fullName>2017 Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>