force-app/main/default/objects/Grantee_Report__c/fields/Role_Volunteers_Played_in_Program__c.field-meta.xml
<CustomField>
    <fullName>Role_Volunteers_Played_in_Program__c</fullName>
    <label>Role Volunteers Played in Program</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>