force-app/main/default/objects/Grantee_Report__c/fields/Sent_Back_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_Back_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent Back By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DCTAT Reports (Sent Back By)</relationshipLabel>
    <relationshipName>DCTAT_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>