force-app/main/default/objects/Grantee_Report__c/fields/Sent_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Back_Date__c</fullName>
    <label>Sent Back Date</label>
    <type>Date</type>
</CustomField>