force-app/main/default/objects/Grantee_Report__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>GranteeReports</relationshipName>
    <type>Lookup</type>
</CustomField>