force-app/main/default/objects/Grantee_Report__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Today</label>
    <type>Date</type>
</CustomField>