force-app/main/default/objects/Grantee_Report__c/fields/Total_Trained_Mentors__c.field-meta.xml
<CustomField>
    <fullName>Total_Trained_Mentors__c</fullName>
    <label>Total Trained Mentors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>