force-app/main/default/objects/Grantee_Report__c/fields/Total_Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Total_Youth_Served__c</fullName>
    <formula
  >VALUE(Previous_Youth_Served__c) + VALUE(New_Youth_Served__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Youth Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>