force-app/main/default/objects/Grantee_Report__c/fields/Unique_Youth_Used_Youth_Development_Park__c.field-meta.xml
<CustomField>
    <fullName>Unique_Youth_Used_Youth_Development_Park__c</fullName>
    <label>Unique Youth Used Youth Development Park</label>
    <length>11</length>
    <type>Text</type>
</CustomField>