force-app/main/default/objects/Grantee_Report__c/fields/Youth_Completed_20_or_More_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Youth_Completed_20_or_More_Sessions__c</fullName>
    <label>Youth Completed 20 or More Sessions</label>
    <length>11</length>
    <type>Text</type>
</CustomField>