force-app/main/default/objects/Grantee_Report__c/fields/Youth_Completed_Less_Than_20_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Youth_Completed_Less_Than_20_Sessions__c</fullName>
    <label>Youth Completed Less Than 20 Sessions</label>
    <length>11</length>
    <type>Text</type>
</CustomField>